# esphome_st25r

./: .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_STATE.md  HARDWARE_SETUP.md  LICENSE  PROJECT_STRUCTURE.md  README.md  TESTING.md  TODO.md  ci-test-i2c.yaml  ci-test-spi.yaml  local-test.yaml  pyproject.toml  test.yaml
.github/workflows/: compile.yml
components/st25r/: __init__.py  binary_sensor.py  st25r.cpp  st25r.h  st25r_registers.h
components/st25r3916/: __init__.py  st25r3916.cpp  st25r3916.h
components/st25r_i2c/: __init__.py  st25r_i2c.cpp  st25r_i2c.h
components/st25r_spi/: __init__.py  st25r_spi.cpp  st25r_spi.h
examples/: example-access-control.yaml  example-basic.yaml
